--- a/src/app/views/products/fields.njk
+++ b/src/app/views/products/fields.njk
@@ -2,9 +2,9 @@
   <div>Categoria</div>
   <div>
     <select name="category_id">
-      {%for category in categories%}}
-        <option value="{{ category.id }}" {% if product.category_id == category.id %}elected{%endif%}>
-          {{category.name}}
+      {% for category in categories %}}
+        <option value="{{ category.id }}" {% if product.category_id == category.id %}selected{%endif%}>
+          {{category.nome}}
         </option>
       {%endfor%}
     </select>
@@ -22,7 +22,7 @@
 </div>
 
 <div class="item">
-  <div>Descrição</div>
+  <div>Título</div>
   <div>
     <textarea name="description">
       {{ product.description}}
